0.8.0/_sources/gallery/add_image_transformed.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/add_image_transformed.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_add_image_transformed.py:


Add image transformed
=====================

Display one image and transform it using the :func:`add_image` API.

.. tags:: visualization-basic

.. GENERATED FROM PYTHON SOURCE LINES 9-20



.. image-sg:: /gallery/images/sphx_glr_add_image_transformed_001.png
   :alt: add image transformed
   :srcset: /gallery/images/sphx_glr_add_image_transformed_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),
    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),






|

.. code-block:: Python


    from skimage import data

    import napari

    # create the viewer with an image and transform (rotate) it
    viewer = napari.Viewer()
    layer = viewer.add_image(data.astronaut(), rgb=True, rotate=45)

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_add_image_transformed.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: add_image_transformed.ipynb <add_image_transformed.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: add_image_transformed.py <add_image_transformed.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: add_image_transformed.zip <add_image_transformed.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
